pglite_direct_run.log
file:///app/pglite-server.mjs:2
import { PGLite } from "@electric-sql/pglite";
         ^^^^^^
SyntaxError: The requested module '@electric-sql/pglite' does not provide an export named 'PGLite'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:336:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)

Node.js v18.19.1
